모든 액티비티에 동일한 액션바 적용을 위한 BaseActivity설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Bubble"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileInformation"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".LoginPageActivity"
             android:exported="false" />
         <activity
